BMC button in options footer

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "QuickSnap",
-  "version": "1.0.2",
-  "description": "Capture anything — YouTube moments or whole tabs — snap quickly, save effortlessly, paste seamlessly.",
+  "version": "1.0.3",
+  "description": "Capture anything - YouTube moments or whole tabs - snap quickly, save effortlessly, paste seamlessly.",
   "permissions": [
     "tabs",
     "activeTab",
